- 
    
Bug
 - 
    Resolution: Fixed
 - 
    
P2: Important
 - 
    6.6, 6.7
 - 
    None
 
- 
        6c3bc690e (dev), c113b6976 (6.7), b42eec66c (6.6)
 
QGrpcChannelOptions::withMetadata states that the return type is QGrpcCallOptions, which is invalid. Should be QGrpcChannelOptions.
| For Gerrit Dashboard: QTBUG-120945 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 530452,2 | Fix typo in QGrpcChannelOptions::withMetadata description | 6.7 | qt/qtgrpc | Status: MERGED | +2 | 0 | 
| 530465,3 | Fix typo in QGrpcChannelOptions::withMetadata description | dev | qt/qtgrpc | Status: MERGED | +2 | 0 | 
| 530525,2 | Fix typo in QGrpcChannelOptions::withMetadata description | 6.6 | qt/qtgrpc | Status: MERGED | +2 | 0 |