Fix typo in QGrpcChannelOptions::withMetadata description

Method returns QGrpcChannelOptions but not QGrpcCallOptions.

Fixes: QTBUG-120945
Change-Id: Ic5b666ba7be9d4cd37b506186a6f9763cee07098
Reviewed-by: Tatiana Borisova <tatiana.borisova@qt.io>
(cherry picked from commit 6c3bc690e45458a7e1f46b97a56ca20634c28665)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit c113b697688bfadcf9a7bf41062c59c078c46fb8)