src/grpc/qgrpcchanneloptions.cpp
@@ -83,7 +83,7 @@ QGrpcChannelOptions &QGrpcChannelOptions::withDeadline(std::chrono::milliseconds
 }
 
 /*!
-    Sets \a metadata for a call and returns updated QGrpcCallOptions object.
+    Sets \a metadata for all calls and returns updated QGrpcChannelOptions object.
 
     For HTTP2-based channels, \a metadata is converted into HTTP/2 headers, that
     added to each HTTP/2 request.
